--- a/learncss/Text and Font/style.css
+++ b/learncss/Text and Font/style.css
@@ -11,7 +11,7 @@ h1 {
 
   /* text-shadow: 4px 4px 5px red, 8px 8px 1px blue; */
 
-  font-family: ;
+  font-family: monospace;
   text-transform: capitalize;
   text-align: center;
   text-decoration: underline red;
